2009-04-23  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Swapped order of CONFIG & DAEMON_ARGS vars.

2009-04-06  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Changed LSB Default-Start / Default-Stop and
	  chkconfig runlevels so daemon is not started by default.

2008-12-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_uid_alloc): Added check for valid 'user'.

	* src/munged/gids.c (_gids_uid_alloc): Updated usage comment.

	* src/munged/gids.c (_gids_hash_create): Added guard for processing
	  results of getgrent() to avoid dereferencing gr_mem if NULL.

	* src/munged/gids.c (_gids_hash_create): Added strerror() to log msg
	  for getgrent() failure.

	* src/munged/gids.c (_gids_hash_create): Added 'do_group_db_close'
	  guard var for endgrent() in 'err' path.

	* src/munged/gids.c (_gids_update): Restructured in order for the gids
	  mutex to be locked/unlocked only once instead of twice per call.

2008-08-14  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/m_msg.c, src/libmunge/encode.c, src/munged/dec.c,
	  src/munged/enc.c, src/munged/munged.c: Removed unnecessary header
	  includes.

	* src/libmissing/inet_ntop.h, src/munged/conf.c, src/munge/unmunge.c:
	  Moved <arpa/inet.h> header include into "inet_ntop.h" #if/#else.

2008-07-01  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with autoconf-2.61, automake-1.10.

	* configure.ac, config/config.h.in,
	  src/libcommon/munge_defs.h, src/libmunge/enum.c,
	  src/libmunge/munge.h, src/libmunge/munge_ctx.3.in, src/munged/md.c:
	  Added support for MUNGE_MAC_SHA512.

	* doc/credential_v3_format.txt: Added additional details to the steps
	  in which credentials are encoded.

2008-01-30  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/path.h: Added missing #include.

	* src/munged/path.c (path_dirname): Changed behavior to return EINVAL
	  error if src is NULL.

2008-01-29  Chris Dunlap  <cdunlap@llnl.gov>
